--- a/client/src/styles/SignUp.css
+++ b/client/src/styles/SignUp.css
@@ -78,7 +78,7 @@
   
   .input-icon {
     background: white;
-    color: grey 
+    color: grey;
   }
   
   .input-icon:hover{
